--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,93 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+*{
+  box-sizing: border-box;
+  padding: 0 ;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  outline: 0;
+  border: 0;
+  text-decoration: none;
+  list-style: none;
+ 
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+:root{
+  --LightYellow : #f6c453 ;
+  --White-yellow : #fefbe9 ;
+  --Orange : #f0a04b ; 
+  --Green : #183a1d  ; 
+  --lightBlue : #e1eedd ; 
+
+--transition : all 400ms ease ; 
+
+  --container-width-lg: 75% ; 
+  --container-width-md: 86% ; 
+  --container-width-sm: 90% ; 
+} 
+html{
+  scroll-behavior: smooth;
+}
+body{
+  font-family: 'Roboto', sans-serif;
+  background-color: var(--White-yellow);
+  color : var(--Green);
+  line-height: 1.7;
+}
+
+.container {
+  width: var(--container-width-lg);
+  margin: 0 auto;
+}
+
+h1,h2,h3,h4,h5{
+  font-weight: 600;
+}
+
+h1{
+  font-size: 2rem;
+}
+
+section{
+  margin-top: 8rem;
+}
+a{
+  color : var(--Orange) ;
+  transition : var(--transition); 
+}
+
+a:hover{
+  color:var(--Green) ;
+}
+
+.btn{
+  width: max-content;
+  display: inline-block;
+  color: var(--Green) ; 
+  padding: 0.75rem 1.2rem;
+  border-radius: 0.4rem;
+  cursor: pointer;
+  border: 1px solid var(--Green);
+  transition: var(--transition) ;
+}
+
+.btn:hover{
+  color: var(--Orange) ;
+  border-color: transparent;
+}
+
+@media screen and( max-width: 1024px ){
+  .container{
+    width: var(--container-width-md) ;
+  }
+  section{
+    margin-top: 5rem;
+  }
+}
+
+@media screen and( max-width: 600px ){
+  .container{
+    width: var(--container-width-sm) ;
+  }
+  section{
+    margin-top: 2rem;
+  }
 }
